--- a/weather-prediction/weather-prediction.ipynb
+++ b/weather-prediction/weather-prediction.ipynb
@@ -279,11 +279,11 @@
    ],
    "source": [
     "# Display first few rows of the dataset\n",
-    "print(\"First few rows of the data:\")\n",
+    "print(\"First few rows of the dataset:\")\n",
     "print(data.head())\n",
     "\n",
     "# Basic information about the dataset\n",
-    "print(\"\\nBasic Info about the data:\")\n",
+    "print(\"\\nBasic Info about the dataset:\")\n",
     "print(data.info())\n",
     "\n",
     "# Statistical summary of the dataset\n",
