--- a/weather-prediction/weather-prediction.ipynb
+++ b/weather-prediction/weather-prediction.ipynb
@@ -347,7 +347,7 @@
     "# Visualizing the distribution of BASEL temperature mean\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.histplot(data['BASEL_temp_mean'], kde=True, bins=30)\n",
-    "plt.title('Distribution of BASEL Temperature Mean')\n",
+    "plt.title('Distribution of BASEL Temperature Mean Boi')\n",
     "plt.xlabel('BASEL Temperature Mean')\n",
     "plt.ylabel('Frequency')\n",
     "plt.show()\n"
